tests/type_errors/resmap_type_mismatch.nos
# expect_error: type mismatch
main() = Ok("hello").resMap(x => x + 1)
